@@ -1,3 +1,3 @@
+// import the CSS framework
 @import "bootstrap";
-body { padding-top: 60px; }
 @import "bootstrap-responsive";
