@@ -7,6 +7,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
+      = link_to 'Home', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
         = render 'layouts/navigation_links'
