@@ -13,7 +13,7 @@
   <body>
     <%%# application layout styled for Zurb Foundation 4 %>
     <header>
-      <%%= render 'layouts/navigation' %>>
+      <%%= render 'layouts/navigation' %>
     </header>
     <main role="main">
       <div class="container">
