@@ -1,7 +1,7 @@
 <%# navigation styled for Zurb Foundation 4 %>
 <nav class="top-bar">
   <ul class="title-area">
-    <li class="name"><!-- add site name or logo here --></li>
+    <li class="name"><%= link_to 'Home', root_path %></li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
   <section class="top-bar-section">
