@@ -2,7 +2,7 @@
 %nav.top-bar
   %ul.title-area
     %li.name
-      -# add site name or logo here
+      = link_to 'Home', root_path
     %li.toggle-topbar.menu-icon
       %a{:href => "#"}
         %span Menu
