@@ -1,2 +1,0 @@
-// Required global settings and mixins for Foundation
-@import "foundation";
