@@ -1,2 +1,1 @@
 <%# add navigation links to this file %>
-<li><%= link_to 'Home', root_path %></li>
