@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "0.4.1"
+  VERSION = "0.4.2"
 end
